[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sounds/MissileSound.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/WheeWhistler_REVERSE.gd" type="Script" id=2]
[ext_resource path="res://Images/WheeWhistler.png" type="Texture" id=3]
[ext_resource path="res://Sounds/WheeWhistler_ChargeUp_SFX.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/MissileHitsPlayerSound_Punchy.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 3.5
height = 42.0

[node name="WheeWhistler_REVERSE" type="Area2D"]
z_index = 5
collision_layer = 8
collision_mask = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.081, -0.5 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="ChargeUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 0.0583146

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_WheeWhistler_REVERSE_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_WheeWhistler_body_entered"]
